--- a/locales/zh-CN/translation.json
+++ b/locales/zh-CN/translation.json
@@ -16,5 +16,11 @@
   "Always show avatar": "显示头像",
   "yuzu-kizuna-title": "羁绊事件",
   "yuzu-kizuna-text": "前往{}的羁绊剧情",
-  "yuzu-reply-title": "回复"
+  "yuzu-reply-title": "回复",
+  "Make custom char": "创建自定义角色",
+  "Name": "名字",
+  "Create": "创建",
+  "Remove custom char confirm title": "删除自定义角色？",
+  "Remove custom char confirm text": "该角色的对话会在刷新后变成玩家说的话",
+  "Enabled": "启用"
 }
