--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -8,6 +8,7 @@
   "clear-chat-confirm-text": "Unsaved chat will be gone forever",
   "clear-chat-confirm-title": "Clear all chat?",
   "clear-chat-confirm-yes": "Yes",
+  "common-cfg-width": "Chat width",
   "custom-char-create": "Upload avatar",
   "custom-char-name": "Name",
   "custom-char-title": "Create custom character",
@@ -28,6 +29,7 @@
   "search-label": "Search",
   "source-enabled": "Include in list",
   "topbar-clear-chat": "Clear chat",
+  "topbar-config": "Renderer config",
   "topbar-load-code": "Load code",
   "topbar-save-code": "Save code",
   "topbar-save-image": "Save image",
