--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -8,6 +8,7 @@
   "clear-chat-confirm-text": "",
   "clear-chat-confirm-title": "",
   "clear-chat-confirm-yes": "",
+  "common-cfg-width": "",
   "custom-char-create": "",
   "custom-char-name": "",
   "custom-char-title": "",
@@ -28,6 +29,7 @@
   "search-label": "",
   "source-enabled": "",
   "topbar-clear-chat": "",
+  "topbar-config": "",
   "topbar-load-code": "",
   "topbar-save-code": "",
   "topbar-save-image": "",
