--- a/locales/zh-CN/translation.json
+++ b/locales/zh-CN/translation.json
@@ -8,6 +8,7 @@
   "clear-chat-confirm-text": "没有保存的聊天内容将无法找回！",
   "clear-chat-confirm-title": "清空全部聊天？",
   "clear-chat-confirm-yes": "清空",
+  "common-cfg-width": "聊天框宽度",
   "custom-char-create": "上传头像",
   "custom-char-name": "名字",
   "custom-char-title": "创建自定义角色",
@@ -28,6 +29,7 @@
   "search-label": "搜索",
   "source-enabled": "包含这些角色",
   "topbar-clear-chat": "清空聊天",
+  "topbar-config": "渲染设置",
   "topbar-load-code": "导入代码",
   "topbar-save-code": "保存代码",
   "topbar-save-image": "保存图片",
