--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -13,6 +13,7 @@
   "custom-char-create": "Upload avatar",
   "custom-char-name": "Name",
   "custom-char-title": "Create custom character",
+  "data-version": "Data Version",
   "help-text-content": "Search for characters on the left.\nClick on an avatar to add it to the bottom-right character area.\nClick on a character area avatar to talk with that character.\nPress Ctrl+Number to quickly switch talking character.\nClick on avatar to the left of input box for images, specials, etc.\nEnter to send, Shift+Enter to break line.\nClick on chat bubble to insert after it.\nRight-click on bubble to edit or delete.",
   "item-type": "Item Type",
   "item-type-choices": "Choices",
@@ -23,6 +24,8 @@
   "item-type-selection": "Selection",
   "item-type-text": "Text",
   "item-type-thoughts": "Thoughts",
+  "latest-update": "Latest Update",
+  "previous-updates": "Previous Updates",
   "remove-custom-char-confirm-cancel": "Cancel",
   "remove-custom-char-confirm-text": "Remove the custom character as well?",
   "remove-custom-char-confirm-title": "If removed, dialogs of the character will appear as text from player after refreshing.",
