--- a/locales/zh-CN/translation.json
+++ b/locales/zh-CN/translation.json
@@ -13,6 +13,7 @@
   "custom-char-create": "上传头像",
   "custom-char-name": "名字",
   "custom-char-title": "创建自定义角色",
+  "data-version": "数据版本",
   "help-text-content": "在左边搜索角色\n点击头像将其加入右下角区域\n点击右下角区域的头像切换当前角色\n切换角色快捷键：Ctrl+数字\n按Enter发送消息，Shift+Enter换行\n点击输入框左侧头像插入图片等\n点击聊天气泡在其后插入\n右键点击聊天气泡编辑或删除",
   "item-type": "类型",
   "item-type-choices": "选项",
@@ -23,6 +24,8 @@
   "item-type-selection": "选择",
   "item-type-text": "文字",
   "item-type-thoughts": "内心独白",
+  "latest-update": "最近更新",
+  "previous-updates": "更新历史",
   "remove-custom-char-confirm-cancel": "取消",
   "remove-custom-char-confirm-text": "如果删除了角色，TA的对话会在刷新后变成玩家说的话",
   "remove-custom-char-confirm-title": "要删除这个角色吗？",
