--- a/locales/zh-TW/translation.json
+++ b/locales/zh-TW/translation.json
@@ -13,6 +13,7 @@
   "custom-char-create": "",
   "custom-char-name": "",
   "custom-char-title": "",
+  "data-version": "",
   "help-text-content": "",
   "item-type": "",
   "item-type-choices": "",
@@ -23,6 +24,8 @@
   "item-type-selection": "",
   "item-type-text": "",
   "item-type-thoughts": "",
+  "latest-update": "",
+  "previous-updates": "",
   "remove-custom-char-confirm-cancel": "",
   "remove-custom-char-confirm-text": "",
   "remove-custom-char-confirm-title": "",
