--- a/locales/zh-TW/translation.json
+++ b/locales/zh-TW/translation.json
@@ -1,5 +1,7 @@
 {
   "chat-edit-always-show-avatar": "",
+  "chat-edit-apply": "",
+  "chat-edit-cancel": "",
   "chat-edit-content": "",
   "chat-edit-delete": "",
   "chat-edit-is-breaking": "",
