--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -1,4 +1,7 @@
 {
+  "app-cfg-width": "",
+  "app-cfg-width-100vw": "",
+  "app-cfg-width-80vw": "",
   "chat-edit-always-show-avatar": "",
   "chat-edit-apply": "",
   "chat-edit-cancel": "",
