--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -9,6 +9,7 @@
   "chat-edit-delete": "Delete",
   "chat-edit-is-breaking": "Break screenshot after this item",
   "chat-edit-name-override": "Override name",
+  "chat-edit-sender": "Sender",
   "chat-input-placeholder": "Chat",
   "clear-chat-confirm-cancel": "Cancel",
   "clear-chat-confirm-text": "Unsaved chat will be gone forever",
@@ -34,10 +35,20 @@
   "remove-custom-char-confirm-text": "Remove the custom character as well?",
   "remove-custom-char-confirm-title": "If removed, dialogs of the character will appear as text from player after refreshing.",
   "remove-custom-char-confirm-yes": "Yes",
+  "save-code-dialog-cancel": "Cancel",
+  "save-code-dialog-no-save-custom-chars": "Don't save custom characters",
+  "save-code-dialog-save": "Download",
+  "save-code-dialog-save-active-chars": "Save active character list",
+  "save-code-dialog-save-active-custom-chars": "Save active custom characters",
+  "save-code-dialog-save-all-custom-chars": "Save all custom characters",
+  "save-code-dialog-save-chat": "Save chat content",
+  "save-code-dialog-save-used-custom-chars": "Save used custom characters",
+  "save-code-dialog-title": "Download chat data JSON file",
   "search-label": "Search",
   "source-enabled": "Include in list",
   "topbar-clear-chat": "Clear chat",
   "topbar-config": "Renderer config",
+  "topbar-feedback": "Feedback",
   "topbar-load-code": "Load code",
   "topbar-save-code": "Save code",
   "topbar-save-image": "Save image",
