--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -9,6 +9,7 @@
   "chat-edit-delete": "",
   "chat-edit-is-breaking": "",
   "chat-edit-name-override": "",
+  "chat-edit-sender": "",
   "chat-input-placeholder": "",
   "clear-chat-confirm-cancel": "",
   "clear-chat-confirm-text": "",
@@ -34,10 +35,20 @@
   "remove-custom-char-confirm-text": "",
   "remove-custom-char-confirm-title": "",
   "remove-custom-char-confirm-yes": "",
+  "save-code-dialog-cancel": "",
+  "save-code-dialog-no-save-custom-chars": "",
+  "save-code-dialog-save": "",
+  "save-code-dialog-save-active-chars": "",
+  "save-code-dialog-save-active-custom-chars": "",
+  "save-code-dialog-save-all-custom-chars": "",
+  "save-code-dialog-save-chat": "",
+  "save-code-dialog-save-used-custom-chars": "",
+  "save-code-dialog-title": "",
   "search-label": "",
   "source-enabled": "",
   "topbar-clear-chat": "",
   "topbar-config": "",
+  "topbar-feedback": "",
   "topbar-load-code": "",
   "topbar-save-code": "",
   "topbar-save-image": "",
