--- a/locales/zh-CN/translation.json
+++ b/locales/zh-CN/translation.json
@@ -9,6 +9,7 @@
   "chat-edit-delete": "删除",
   "chat-edit-is-breaking": "截图时在这里分割图片",
   "chat-edit-name-override": "临时改名",
+  "chat-edit-sender": "发送自",
   "chat-input-placeholder": "聊天内容",
   "clear-chat-confirm-cancel": "取消",
   "clear-chat-confirm-text": "没有保存的聊天内容将无法找回！",
@@ -34,10 +35,20 @@
   "remove-custom-char-confirm-text": "如果删除了角色，TA的对话会在刷新后变成玩家说的话",
   "remove-custom-char-confirm-title": "要删除这个角色吗？",
   "remove-custom-char-confirm-yes": "删除",
+  "save-code-dialog-cancel": "取消",
+  "save-code-dialog-no-save-custom-chars": "不保存自定义角色",
+  "save-code-dialog-save": "下载",
+  "save-code-dialog-save-active-chars": "保存右下角角色列表",
+  "save-code-dialog-save-active-custom-chars": "保存右下角出现的自定义角色",
+  "save-code-dialog-save-all-custom-chars": "保存所有自定义角色",
+  "save-code-dialog-save-chat": "保存对话",
+  "save-code-dialog-save-used-custom-chars": "保存对话中出现的自定义角色",
+  "save-code-dialog-title": "下载对话数据JSON文件",
   "search-label": "搜索",
   "source-enabled": "包含这些角色",
   "topbar-clear-chat": "清空聊天",
   "topbar-config": "渲染设置",
+  "topbar-feedback": "反馈",
   "topbar-load-code": "导入代码",
   "topbar-save-code": "保存代码",
   "topbar-save-image": "保存图片",
